Change Log:

**6/14/17**

- Added Threatening Shout/Falter (other player buffs)
- Added Gem of Effacious Toxin (other player buffs)
- Changed max Gem level to 1000
- Removed (old) Vengeance/Dark heart mechanic (AoE DoT)
- Increased rift max level to 1000
- Added Monk Unity buff

- Default Firing Delay to 0

**6/7/17**
- Fixed compare of heroes from multiple battletags

**6/6/17**
- Added hero name to compare data (only set on import)

**4/10/17**

- Fixed "downtime" calculation in CDR panel
- Added MH and OH Weapon IAS to "Stats Calc" list of available stats to play with

**4/4/17**

- Added Frostburn 

**4/3/17**

- Fixed calculation of hatred returned by Karlei's Point

**3/22/17**

- Added Holy Point Shot (patch 2.5)
- Fixed missing S6 calculation in Max Hit tab
- Added Melee weapon types (Dagger, Sword, etc...)
- Holy Point shot can hit multiple targets
- Karlei's will return hatred for each target hit (include extra targets from HPS and Ricochet rune).

**2/24/16**

- Fixed import of Grenade skill damage on import

**2/23/16**

- Fixed logic in parsing leaderboard data

**1/11/17**
- Added Danetta's Spite Set Bonus (Vault costs 8 hatred)
- When equipped with Danetta's Spite and Action Shot rune is selected for Vault and Focus+Restraint equipped, Vault will be used to keep the spender buff up

**1/6/17**
- Hellcat damage bonus no longer applies to Sentries
- Hellcat damage adjusted by proc coefficient. Note: currently it is believed that Hellcat has an universal Proc Coefficient of 50%, regardless of skill. This is currently implemented in the calculator as "all or nothing" (i.e. you either get 0 bounces, or 3-5 bounces, based on the belt's legendary power value).
- Hellcat now affects Grenade (primary skill)

**1/5/17**
- Added Hellcat Waistguard mechanics

**1/4/17**
- Updated (partially) for 2.4.3 (M6 to 1200%)

**10/26/16**
- Fixed FoK/Knives Expert to include RCR in hatred cost.