@@ -1,5 +1,9 @@
 Change Log:
 
+**6/15/17**
+
+- Updated Sheet DPS tab to recalculate whenever Falter or Unity buffs are selected.
+
 **6/14/17**
 
 - Added Threatening Shout/Falter (other player buffs)
